chore(shared): regen types TS — Photo + PrepareUpload
